--- a/style.css
+++ b/style.css
@@ -1,82 +1,73 @@
-*{
-    margin: 0px;
-    padding: 1px;
-    background-color:white;
-}
-.img{
-    width: 150px;
-    padding: 0 100px;
-   
-}
-.img1{
-    width: auto;
-    height: 650px;
-}
-.img2{
-    width: 200px;
-    height: 200px;
-}
-.img3{
-    width: 300px;
-    height: 300px;
-}
-.container{
-    max-width: 100vw;
-}
-.navbar{
+body {
+    background-image: url("images/background.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  
+.container {
+    max-width: 500px;
+    margin: 0 auto;
+    padding: 20px;
+  }
+  
+  h1 {
+    text-align: center;
+    color: rgb(65, 138, 201);
+  }
+  
+  .input-container {
     display: flex;
-    height: 67px;
-}
-.navbar li{
-    list-style: none;
-    margin: 0 12px;
-}
-.topleft{width: 50%;
-         padding: 12px 0;}
-.topright{width: 50%;
-          padding:12px 0 ;}
-.section2{
-    padding-left: 63px;
-    padding-right: 63px;
-
-          }
-.section3{
-    padding-top: 50px;
-     padding-left: 63px;
-     padding-right: 63px;
-        
-                  }
-.section2 h1{
-   font-size: 1.6rem;
-}
-.box{
-    margin: 12px 22px;
-    border: solid 2px hotpink;
-}
-.border{
-    background-color:hotpink;
+    align-items: center;
+  }
+  
+  .input-container input[type="text"] {
+    flex: 1;
+    padding: 10px;
+    margin-right: 10px;
+  }
+  
+  .input-container select, .input-container input[type="date"] {
+    padding: 10px;
+    margin-right: 10px;
+  }
+  
+  .input-container button {
+    background-color:rgb(65, 138, 201);
     color: white;
-    height: 20px;
-    font-weight: bold;
-    text-align: center;
-}
-footer{
-    padding: 23px;
-    text-align: center;
-    background-color: hotpink;
-}
-.form-container{ background-color: white;
-    text-align: center;
-    padding: 30px;}
-
-input{
-width: 200px;
-margin: 10px 0px;
-padding: 10px;
-}
-input[type = 'submit']{
-width: 220px;
-background-color: hotpink;
-color: white;
-border: 0px;
-}
+    border: 1px solid  rgb(65, 138, 201) ;
+    border-radius: 20%;
+    padding: 10px;
+    cursor: pointer;
+  }
+  
+  ul {
+    list-style-type: none;
+    padding: 0;
+    margin-top: 20px;
+  }
+  
+  li {
+    margin-bottom: 10px;
+    background-color: #f9f9f9;
+    padding: 10px;
+    border-radius: 5px;
+  }
+  
+  li.completed {
+    text-decoration: line-through;
+    opacity: 0.7;
+  }
+  
+  li.high-priority {
+    background-color: pink;
+  }
+  
+  li.medium-priority {
+    background-color: #efde79;
+  }
+  
+  li.low-priority {
+    background-color:plum;
+  }
+  
+  
